# create-rag-app

./: .gitignore  README.md  pyproject.toml
src/create_rag_app/: cli.py  main.py
src/create_rag_app/components/: base.py
src/create_rag_app/components/embedding/: all_minilm.py  jina.py
src/create_rag_app/components/retriever/: __init__.py  dense.py  hybrid.py  sparse.py
src/create_rag_app/components/vectorstore/: pinecone.py  qdrant.py
templates/: config.py.j2  docker-compose.yml.j2  requirements.txt.j2
templates/base/: Dockerfile.backend.j2  Dockerfile.frontend.j2  docker-compose.yml.j2
templates/base/src/: vectorstore.py.j2
templates/base/src/utils/: embedder.py.j2
templates/components/embedding/: all_minilm_l6_v2.j2  jina.j2
templates/src/: rag_pipeline.py.j2  vectorstore.py.j2
templates/src/utils/: embedder.py.j2  loader.py.j2
