[project]
name = "create-rag-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Syed-MuhammadTaha",email = "simam.bscs22seecs@seecs.edu.pk"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer (>=0.16.0,<0.17.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "questionary (>=2.1.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "create_rag_app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
